// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateCredentialDialog Component should export select options: options 1`] = `
{
  "authenticationTypeOptions": [
    {
      "title": [Function],
      "value": "sshKey",
    },
    {
      "title": [Function],
      "value": "token",
    },
    {
      "selected": true,
      "title": [Function],
      "value": "usernamePassword",
    },
  ],
  "becomeMethodTypeOptions": [
    "sudo",
    "su",
    "pbrun",
    "pfexec",
    "doas",
    "dzdo",
    "ksu",
    "runas",
  ],
}
`;

exports[`CreateCredentialDialog Component should handle a pending display state: pending 1`] = `null`;

exports[`CreateCredentialDialog Component should handle variations in basic form display for ansible credential type: ansible 1`] = `
[
  <input
    aria-invalid="false"
    context\\":\\"ansible\\"})"=""
    data-ouia-component-id="generatedid-"
    data-ouia-component-type="PF5/TextInput"
    data-ouia-safe="true"
    id="generatedid-"
    name="generatedid-"
    readonly=""
    type="text"
    value="t(form-dialog.label, {\\"
  />,
  <input
    aria-invalid="false"
    context\\":\\"placeholder\\"})"=""
    data-ouia-component-id="cred_name"
    data-ouia-component-type="PF5/TextInput"
    data-ouia-safe="true"
    id="cred_name"
    maxlength="64"
    name="name"
    placeholder="t(form-dialog.label_name_create-credential, {\\"
    type="text"
    value=""
  />,
  <input
    aria-invalid="false"
    context\\":\\"placeholder\\"})"=""
    data-ouia-component-id="username"
    data-ouia-component-type="PF5/TextInput"
    data-ouia-safe="true"
    id="username"
    name="username"
    placeholder="t(form-dialog.label_username, {\\"
    type="text"
    value=""
  />,
  <input
    aria-invalid="false"
    context\\":\\"placeholder\\"})"=""
    data-ouia-component-id="password"
    data-ouia-component-type="PF5/TextInput"
    data-ouia-safe="true"
    id="password"
    name="password"
    placeholder="t(form-dialog.label_password, {\\"
    type="password"
    value=""
  />,
]
`;

exports[`CreateCredentialDialog Component should handle variations in basic form display for network credential type: network 1`] = `
[
  <input
    aria-invalid="false"
    context\\":\\"network\\"})"=""
    data-ouia-component-id="generatedid-"
    data-ouia-component-type="PF5/TextInput"
    data-ouia-safe="true"
    id="generatedid-"
    name="generatedid-"
    readonly=""
    type="text"
    value="t(form-dialog.label, {\\"
  />,
  <input
    aria-invalid="false"
    context\\":\\"placeholder\\"})"=""
    data-ouia-component-id="cred_name"
    data-ouia-component-type="PF5/TextInput"
    data-ouia-safe="true"
    id="cred_name"
    maxlength="64"
    name="name"
    placeholder="t(form-dialog.label_name_create-credential, {\\"
    type="text"
    value=""
  />,
  <div
    class="quipucords-select quipucords-select__not-inline"
  >
     ...
  </div>,
]
`;

exports[`CreateCredentialDialog Component should handle variations in basic form display for openshift credential type: openshift 1`] = `
[
  <input
    aria-invalid="false"
    context\\":\\"openshift\\"})"=""
    data-ouia-component-id="generatedid-"
    data-ouia-component-type="PF5/TextInput"
    data-ouia-safe="true"
    id="generatedid-"
    name="generatedid-"
    readonly=""
    type="text"
    value="t(form-dialog.label, {\\"
  />,
  <input
    aria-invalid="false"
    context\\":\\"placeholder\\"})"=""
    data-ouia-component-id="cred_name"
    data-ouia-component-type="PF5/TextInput"
    data-ouia-safe="true"
    id="cred_name"
    maxlength="64"
    name="name"
    placeholder="t(form-dialog.label_name_create-credential, {\\"
    type="text"
    value=""
  />,
  <input
    aria-invalid="false"
    context\\":\\"placeholder\\"})"=""
    data-ouia-component-id="auth_token"
    data-ouia-component-type="PF5/TextInput"
    data-ouia-safe="true"
    id="auth_token"
    name="auth_token"
    placeholder="t(form-dialog.label_token_create-credential, {\\"
    type="text"
    value=""
  />,
]
`;

exports[`CreateCredentialDialog Component should handle variations in basic form display for satellite credential type: satellite 1`] = `
[
  <input
    aria-invalid="false"
    context\\":\\"satellite\\"})"=""
    data-ouia-component-id="generatedid-"
    data-ouia-component-type="PF5/TextInput"
    data-ouia-safe="true"
    id="generatedid-"
    name="generatedid-"
    readonly=""
    type="text"
    value="t(form-dialog.label, {\\"
  />,
  <input
    aria-invalid="false"
    context\\":\\"placeholder\\"})"=""
    data-ouia-component-id="cred_name"
    data-ouia-component-type="PF5/TextInput"
    data-ouia-safe="true"
    id="cred_name"
    maxlength="64"
    name="name"
    placeholder="t(form-dialog.label_name_create-credential, {\\"
    type="text"
    value=""
  />,
  <input
    aria-invalid="false"
    context\\":\\"placeholder\\"})"=""
    data-ouia-component-id="username"
    data-ouia-component-type="PF5/TextInput"
    data-ouia-safe="true"
    id="username"
    name="username"
    placeholder="t(form-dialog.label_username, {\\"
    type="text"
    value=""
  />,
  <input
    aria-invalid="false"
    context\\":\\"placeholder\\"})"=""
    data-ouia-component-id="password"
    data-ouia-component-type="PF5/TextInput"
    data-ouia-safe="true"
    id="password"
    name="password"
    placeholder="t(form-dialog.label_password, {\\"
    type="password"
    value=""
  />,
]
`;

exports[`CreateCredentialDialog Component should handle variations in basic form display for vcenter credential type: vcenter 1`] = `
[
  <input
    aria-invalid="false"
    context\\":\\"vcenter\\"})"=""
    data-ouia-component-id="generatedid-"
    data-ouia-component-type="PF5/TextInput"
    data-ouia-safe="true"
    id="generatedid-"
    name="generatedid-"
    readonly=""
    type="text"
    value="t(form-dialog.label, {\\"
  />,
  <input
    aria-invalid="false"
    context\\":\\"placeholder\\"})"=""
    data-ouia-component-id="cred_name"
    data-ouia-component-type="PF5/TextInput"
    data-ouia-safe="true"
    id="cred_name"
    maxlength="64"
    name="name"
    placeholder="t(form-dialog.label_name_create-credential, {\\"
    type="text"
    value=""
  />,
  <input
    aria-invalid="false"
    context\\":\\"placeholder\\"})"=""
    data-ouia-component-id="username"
    data-ouia-component-type="PF5/TextInput"
    data-ouia-safe="true"
    id="username"
    name="username"
    placeholder="t(form-dialog.label_username, {\\"
    type="text"
    value=""
  />,
  <input
    aria-invalid="false"
    context\\":\\"placeholder\\"})"=""
    data-ouia-component-id="password"
    data-ouia-component-type="PF5/TextInput"
    data-ouia-safe="true"
    id="password"
    name="password"
    placeholder="t(form-dialog.label_password, {\\"
    type="password"
    value=""
  />,
]
`;

exports[`CreateCredentialDialog Component should render a basic component: basic 1`] = `
<screen>
  <div>
    <div
      class="quipucords-modal quipucords-modal__rcue-width pf-v5-c-backdrop__open"
    >
      <div>
        <div
          class="pf-v5-c-backdrop"
        >
          <div
            class="pf-v5-l-bullseye"
          >
            <div
              aria-describedby="pf-modal-part-2"
              aria-label="t(modal.aria-label-default)"
              aria-labelledby="pf-modal-part-0"
              aria-modal="true"
              class="pf-v5-c-modal-box pf-m-align-top"
              data-ouia-component-id="OUIA-Generated-Modal-1"
              data-ouia-component-type="PF5/ModalContent"
              data-ouia-safe="true"
              id="pf-modal-part-0"
              role="dialog"
              style="--pf-v5-c-modal-box--m-align-top--spacer: 5%;"
            >
              <div
                class="pf-v5-c-modal-box__close"
              >
                <button
                  aria-disabled="false"
                  aria-label="Close"
                  class="pf-v5-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Modal-1-ModalBoxCloseButton"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    />
                  </svg>
                </button>
              </div>
              <header
                class="pf-v5-c-modal-box__header"
              >
                <h4
                  class="pf-v5-c-title pf-m-md"
                  data-ouia-component-id="OUIA-Generated-Title-1"
                  data-ouia-component-type="PF5/Title"
                  data-ouia-safe="true"
                >
                   t(form-dialog.title, {"context":"create-credential"}) 
                </h4>
              </header>
              <div
                class="pf-v5-c-modal-box__body"
                id="pf-modal-part-2"
              >
                <div>
                  <form
                    class="pf-v5-c-form pf-m-horizontal"
                    novalidate=""
                  >
                    <div
                      class="pf-v5-c-form__group"
                      helpertextinvalid=""
                      validated="default"
                    >
                      <div
                        class="pf-v5-c-form__group-label"
                      >
                        <label
                          class="pf-v5-c-form__label"
                          for="generatedid-"
                        >
                          <span
                            class="pf-v5-c-form__label-text"
                          >
                             t(form-dialog.label_source-type, {"context":"create-credential"}) 
                          </span>
                        </label>
                      </div>
                      <div
                        class="pf-v5-c-form__group-control"
                      >
                        <span
                          class="pf-v5-c-form-control pf-m-readonly quipucords-form__text-input "
                        >
                          <input
                            aria-invalid="false"
                            context\\":\\"network\\"})"=""
                            data-ouia-component-id="generatedid-"
                            data-ouia-component-type="PF5/TextInput"
                            data-ouia-safe="true"
                            id="generatedid-"
                            name="generatedid-"
                            readonly=""
                            type="text"
                            value="t(form-dialog.label, {\\"
                          />
                        </span>
                      </div>
                    </div>
                    <div
                      class="pf-v5-c-form__group"
                      helpertextinvalid="Error"
                      validated="default"
                    >
                      <div
                        class="pf-v5-c-form__group-label"
                      >
                        <label
                          class="pf-v5-c-form__label"
                          for="cred_name"
                        >
                          <span
                            class="pf-v5-c-form__label-text"
                          >
                             t(form-dialog.label_name, {"context":"create-credential"}) 
                          </span>
                        </label>
                      </div>
                      <div
                        class="pf-v5-c-form__group-control"
                      >
                        <span
                          class="pf-v5-c-form-control quipucords-form__text-input "
                        >
                          <input
                            aria-invalid="false"
                            context\\":\\"placeholder\\"})"=""
                            data-ouia-component-id="cred_name"
                            data-ouia-component-type="PF5/TextInput"
                            data-ouia-safe="true"
                            id="cred_name"
                            maxlength="64"
                            name="name"
                            placeholder="t(form-dialog.label_name_create-credential, {\\"
                            type="text"
                            value=""
                          />
                        </span>
                      </div>
                    </div>
                    <div
                      class="pf-v5-c-form__group"
                      helpertextinvalid=""
                      validated="default"
                    >
                      <div
                        class="pf-v5-c-form__group-label"
                      >
                        <label
                          class="pf-v5-c-form__label"
                          for="generatedid-"
                        >
                          <span
                            class="pf-v5-c-form__label-text"
                          >
                             t(form-dialog.label_auth-type, {"context":"create-credential"}) 
                          </span>
                        </label>
                      </div>
                      <div
                        class="pf-v5-c-form__group-control"
                      >
                        <div
                          class="quipucords-select quipucords-select__not-inline"
                        />
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</screen>
`;
